--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <video id="video" controls autoplay></video>
 
   <script>
-    const sheetAPI = "YOUR_SCRIPT_URL_HERE";
+    const sheetAPI = 'https://script.google.com/macros/s/AKfycbz4gVKQ8SJAwA_GxRe2ksqyaBH7flddNQYbU8qGdEYefLaiqhOMFdw4ML0xaC854HzTBw/exec';
     const player = new shaka.Player(document.getElementById("video"));
 
     async function loadMatches() {
