--- a/index.html
+++ b/index.html
@@ -1,149 +1,236 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>BDStreamHub Video Player</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- hls.js CDN -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <style>
+    /* Reset & base */
+    * {
+      box-sizing: border-box;
+    }
     body {
-      background: #181818;
+      background: #121212;
       margin: 0;
-      padding: 0;
+      height: 100vh;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      min-height: 100vh;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Poppins', sans-serif;
+      color: #eee;
+      user-select: none;
+    }
+    /* Title above browser window, not inside player */
+    .page-title {
+      margin: 20px 0 10px 0;
+      font-size: 24px;
+      font-weight: 700;
+      color: #00ffc8;
+      text-align: center;
+      user-select: text;
     }
     .player-container {
       position: relative;
-      width: 90vw;
-      max-width: 700px;
-      background: #222;
-      border-radius: 12px;
-      box-shadow: 0 4px 24px #0008;
+      width: 480px;
+      max-width: 95vw;
+      border-radius: 14px;
       overflow: hidden;
+      box-shadow:
+        0 5px 15px rgba(0, 255, 197, 0.3),
+        inset 0 0 50px #00ffc8;
+      background: #0b0f12;
+      font-size: 14px;
+      outline: none;
     }
     video {
       width: 100%;
-      background: #000;
+      height: auto;
       display: block;
+      background: #000;
+      cursor: pointer;
+      filter: drop-shadow(0 0 8px #00ffc8aa);
     }
+
+    /* Watermark on bottom right, no shadow */
     .watermark {
       position: absolute;
-      top: 12px;
-      left: 12px;
-      background: rgba(0,0,0,0.5);
-      color: #fff;
-      font-weight: bold;
-      font-size: 18px;
-      padding: 4px 12px;
-      border-radius: 6px;
-      z-index: 10;
-      pointer-events: none;
-      user-select: none;
-      letter-spacing: 1px;
-    }
-    .logo-thumb {
-      position: absolute;
-      top: 12px;
+      bottom: 40px;
       right: 12px;
-      width: 80px;
-      height: 45px;
-      border-radius: 6px;
-      object-fit: cover;
-      box-shadow: 0 2px 8px #0006;
-      z-index: 10;
+      background: transparent;
+      padding: 3px 8px;
+      font-weight: 600;
+      font-size: 12px;
+      border-radius: 14px;
+      color: #00ffc8;
       pointer-events: none;
+      letter-spacing: 1.1px;
       user-select: none;
-      border: 2px solid #fff3;
-      background: #222;
+      z-index: 20;
+      white-space: nowrap;
     }
+
+    /* Controls container */
     .controls {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background: #181818e0;
-      padding: 8px 12px;
       position: absolute;
       bottom: 0;
       width: 100%;
-      z-index: 5;
-      transition: opacity 0.3s;
+      padding: 10px 14px;
+      background: rgba(1, 18, 21, 0.75);
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      opacity: 0.3;
+      transition: opacity 0.3s ease;
+      backdrop-filter: blur(8px);
+      z-index: 15;
     }
-    .controls button, .controls select, .controls input[type=range] {
-      margin: 0 4px;
-      background: #222;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 4px 8px;
-      font-size: 15px;
-      outline: none;
-      cursor: pointer;
+    .player-container:hover .controls,
+    .controls.show {
+      opacity: 1;
     }
-    .controls input[type=range] {
-      width: 80px;
-      accent-color: #00b894;
-    }
-    .controls select {
-      background: #222;
-      color: #fff;
-      border: 1px solid #333;
-      padding: 2px 6px;
-    }
+
+    /* Progress bar container */
     .progress-bar {
-      flex: 1;
-      margin: 0 8px;
+      flex-grow: 1;
       height: 6px;
-      background: #444;
-      border-radius: 3px;
+      background: #00231f;
+      border-radius: 6px;
       cursor: pointer;
       position: relative;
       overflow: hidden;
+      box-shadow: inset 0 0 6px #00ffd0bb;
     }
     .progress {
       height: 100%;
-      background: #00b894;
+      background: linear-gradient(90deg, #00ffc8, #00fff7);
       width: 0%;
-      border-radius: 3px;
-      transition: width 0.1s;
+      border-radius: 6px 0 0 6px;
+      transition: width 0.15s ease;
+      box-shadow: 0 0 8px #00ffc8aa;
     }
+
+    /* Buttons & sliders style */
+    button, select, input[type=range] {
+      cursor: pointer;
+      background: transparent;
+      border: none;
+      outline: none;
+      color: #00ffc8;
+      transition: color 0.25s ease;
+      font-size: 18px;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      user-select: none;
+    }
+    button:hover, select:hover, input[type=range]:hover {
+      color: #20ffde;
+    }
+    select {
+      font-size: 14px;
+      padding: 2px 6px;
+      background: #00231f;
+      border-radius: 6px;
+      box-shadow: 0 0 8px #00ffc888 inset;
+      color: #00ffc8;
+      min-width: 75px;
+    }
+    input[type=range] {
+      width: 80px;
+      accent-color: #00ffc8;
+      -webkit-appearance: none;
+      height: 6px;
+      border-radius: 4px;
+      box-shadow: 0 0 8px #00ffc8aa;
+      margin: 0;
+    }
+    input[type=range]:focus {
+      outline: none;
+    }
+    input[type=range]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      background: #00ffc8;
+      box-shadow: 0 0 8px #00ffc8cc;
+      cursor: pointer;
+      margin-top: -6px;
+      transition: background 0.3s ease;
+    }
+    input[type=range]:focus::-webkit-slider-thumb {
+      background: #20ffde;
+    }
+    input[type=range]::-moz-range-thumb {
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      background: #00ffc8;
+      box-shadow: 0 0 8px #00ffc8cc;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    input[type=range]:focus::-moz-range-thumb {
+      background: #20ffde;
+    }
+
+    /* Time display */
     .time {
-      color: #fff;
       font-size: 13px;
-      min-width: 70px;
+      min-width: 60px;
       text-align: center;
+      color: #00ffcc;
+      user-select: none;
+      letter-spacing: 0.5px;
+      font-variant-numeric: tabular-nums;
     }
-    @media (max-width: 600px) {
-      .player-container { max-width: 100vw; }
-      .logo-thumb { width: 60px; height: 34px; }
-      .watermark { font-size: 14px; padding: 2px 8px; }
-      .controls { font-size: 13px; padding: 6px 4px; }
-      .controls input[type=range] { width: 50px; }
+
+    /* Responsive */
+    @media (max-width: 520px) {
+      .player-container {
+        width: 95vw !important;
+      }
+      button {
+        font-size: 16px;
+      }
+      .time {
+        font-size: 12px;
+        min-width: 50px;
+      }
+      input[type=range] {
+        width: 70px;
+      }
+      select {
+        font-size: 12px;
+        min-width: 60px;
+      }
+      .watermark {
+        font-size: 10px;
+        bottom: 50px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="player-container">
+  <div class="page-title">BANGLADESH vs BHUTAN</div>
+  <div class="player-container" tabindex="0" id="playerContainer">
+    <video id="video" poster="https://image.tsports.com/images/mobile_thumbnail/1748953055-BAN-v-Bhutan-ott-1280.jpg" playsinline autoplay muted></video>
     <div class="watermark">BDStreamHub</div>
-    <img class="logo-thumb" src="https://image.tsports.com/images/mobile_thumbnail/1748953055-BAN-v-Bhutan-ott-1280.jpg" alt="Logo">
-    <video id="video" poster="https://image.tsports.com/images/mobile_thumbnail/1748953055-BAN-v-Bhutan-ott-1280.jpg" autoplay playsinline></video>
     <div class="controls" id="controls">
-      <button id="playPause">⏸️</button>
-      <div class="progress-bar" id="progressBar">
+      <button id="playPause" title="Play/Pause">⏸️</button>
+      <div class="progress-bar" id="progressBar" title="Click to seek video">
         <div class="progress" id="progress"></div>
       </div>
-      <span class="time" id="currentTime">00:00</span> / <span class="time" id="duration">00:00</span>
-      <input type="range" id="volume" min="0" max="1" step="0.01" value="1" title="Volume">
-      <select id="qualitySelect" title="Quality"></select>
-      <button id="fullscreen">⛶</button>
+      <span class="time" id="currentTime">00:00</span> /
+      <span class="time" id="duration">00:00</span>
+      <input type="range" id="volume" min="0" max="1" step="0.01" value="0" title="Volume" />
+      <select id="qualitySelect" title="Select Quality"></select>
+      <button id="fullscreen" title="Fullscreen">⛶</button>
     </div>
   </div>
+
   <script>
-    // Video info
     const videoSrc = "https://live.tsports.com/mobile_hls/tsports_live_1/playlist.m3u8";
     const video = document.getElementById('video');
     const playPause = document.getElementById('playPause');
@@ -154,146 +241,158 @@
     const volume = document.getElementById('volume');
     const fullscreen = document.getElementById('fullscreen');
     const qualitySelect = document.getElementById('qualitySelect');
+    const controls = document.getElementById('controls');
+    const container = document.getElementById('playerContainer');
     let hls;
     let qualities = [];
     let isLive = false;
 
-    // HLS.js setup
+    function formatTime(seconds) {
+      const m = Math.floor(seconds / 60);
+      const s = Math.floor(seconds % 60);
+      return (m < 10 ? '0' : '') + m + ':' + (s < 10 ? '0' : '') + s;
+    }
+
+    // HLS setup
     function setupHLS() {
       if (Hls.isSupported()) {
         hls = new Hls({
-          autoStartLoad: true,
-          startLevel: -1,
-          capLevelToPlayerSize: true,
           maxBufferLength: 30,
+          startPosition: -1,
+          autoStartLoad: true
         });
         hls.loadSource(videoSrc);
         hls.attachMedia(video);
 
-        hls.on(Hls.Events.MANIFEST_PARSED, function (event, data) {
-          // Quality options
+        hls.on(Hls.Events.MANIFEST_PARSED, (event, data) => {
           qualities = data.levels.map((level, i) => ({
             label: level.height ? level.height + 'p' : (level.name || 'Auto'),
-            index: i,
-            bitrate: level.bitrate
+            index: i
           }));
-          // Add 'Auto'
+
           qualitySelect.innerHTML = '<option value="-1">Auto</option>';
           qualities.forEach(q => {
-            qualitySelect.innerHTML += `<option value="${q.index}">${q.label}</option>`;
+            qualitySelect.innerHTML += `<option value="\${q.index}">\${q.label}</option>`;
           });
           qualitySelect.value = -1;
         });
 
-        hls.on(Hls.Events.LEVEL_SWITCHED, function(event, data) {
-          // Optionally, you can highlight the current quality
-        });
-
-        hls.on(Hls.Events.LEVEL_LOADED, function(event, data) {
+        hls.on(Hls.Events.LEVEL_LOADED, (event, data) => {
           isLive = data.details.live;
           if (isLive) {
             duration.textContent = "LIVE";
+          } else {
+            duration.textContent = formatTime(video.duration);
           }
         });
-
       } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
         video.src = videoSrc;
       } else {
-        alert("Your browser does not support HLS playback.");
+        alert("এই ব্রাউজারে HLS ভিডিও প্লে সমর্থিত নয়");
+      }
+    }
+    setupHLS();
+
+    // Autoplay setup: muted initially to allow autoplay
+    video.autoplay = true;
+    video.muted = true;
+    video.playsInline = true;
+
+    // Set initial volume slider to zero because video is muted
+    volume.value = 0;
+
+    // When user changes volume, unmute video
+    volume.addEventListener('input', () => {
+      video.volume = volume.value;
+      if (volume.value > 0 && video.muted) {
+        video.muted = false;
+      } else if (volume.value == 0) {
+        video.muted = true;
+      }
+    });
+
+    // Play/pause toggle
+    function togglePlay() {
+      if (video.paused) {
+        video.play();
+      } else {
+        video.pause();
       }
     }
 
-    setupHLS();
-
-    // Autoplay
-    video.muted = false;
-    video.autoplay = true;
-    video.playsInline = true;
-    video.addEventListener('canplay', () => {
-      video.play();
-    });
-
-    // Play/Pause
     playPause.addEventListener('click', () => {
-      if (video.paused) {
-        video.play();
-        playPause.textContent = '⏸️';
-      } else {
-        video.pause();
-        playPause.textContent = '▶️';
-      }
+      togglePlay();
     });
-    video.addEventListener('play', () => playPause.textContent = '⏸️');
-    video.addEventListener('pause', () => playPause.textContent = '▶️');
 
-    // Progress bar
+    video.addEventListener('play', () => {
+      playPause.textContent = '⏸️';
+    });
+    video.addEventListener('pause', () => {
+      playPause.textContent = '▶️';
+    });
+
+    // Progress bar update
     video.addEventListener('timeupdate', () => {
       if (!isLive) {
-        const percent = (video.currentTime / video.duration) * 100;
+        const percent = (video.currentTime / video.duration) * 100 || 0;
         progress.style.width = percent + '%';
         currentTime.textContent = formatTime(video.currentTime);
         duration.textContent = formatTime(video.duration);
       } else {
-        progress.style.width = '100%';
+        progress.style.width = "100%";
         currentTime.textContent = "LIVE";
+        duration.textContent = "LIVE";
       }
     });
 
-    progressBar.addEventListener('click', (e) => {
+    // Seek video on progress bar click
+    progressBar.addEventListener('click', e => {
       if (!isLive) {
         const rect = progressBar.getBoundingClientRect();
-        const percent = (e.clientX - rect.left) / rect.width;
-        video.currentTime = percent * video.duration;
+        const clickX = e.clientX - rect.left;
+        const seekTime = (clickX / rect.width) * video.duration;
+        video.currentTime = seekTime;
       }
     });
 
-    // Volume
-    volume.addEventListener('input', () => {
-      video.volume = volume.value;
-    });
-    video.volume = volume.value;
-
-    // Fullscreen
+    // Fullscreen toggle
     fullscreen.addEventListener('click', () => {
       if (document.fullscreenElement) {
         document.exitFullscreen();
       } else {
-        video.parentElement.requestFullscreen();
+        container.requestFullscreen();
       }
     });
 
-    // Quality select
+    // Quality change
     qualitySelect.addEventListener('change', () => {
       if (hls) {
-        hls.currentLevel = parseInt(qualitySelect.value);
+        const level = parseInt(qualitySelect.value);
+        hls.currentLevel = level;
       }
     });
 
-    // Format time
-    function formatTime(sec) {
-      if (isNaN(sec)) return "00:00";
-      let m = Math.floor(sec / 60);
-      let s = Math.floor(sec % 60);
-      return (m < 10 ? '0' : '') + m + ':' + (s < 10 ? '0' : '') + s;
-    }
-
-    // Hide controls when not hovering
-    let controls = document.getElementById('controls');
-    let container = document.querySelector('.player-container');
-    let hideTimeout;
+    // Show controls on hover/focus
     function showControls() {
-      controls.style.opacity = 1;
-      clearTimeout(hideTimeout);
-      hideTimeout = setTimeout(() => {
-        controls.style.opacity = 0.2;
-      }, 3000);
+      controls.classList.add('show');
+      clearTimeout(window.hideControlsTimeout);
+      window.hideControlsTimeout = setTimeout(() => {
+        controls.classList.remove('show');
+      }, 4000);
     }
     container.addEventListener('mousemove', showControls);
-    container.addEventListener('mouseleave', () => controls.style.opacity = 0.2);
+    container.addEventListener('focusin', showControls);
+    container.addEventListener('focusout', () => {
+      controls.classList.remove('show');
+    });
     showControls();
 
-    // Prevent context menu on video
+    // Click video toggles play/pause
+    video.addEventListener('click', togglePlay);
+
+    // Prevent right-click on video
     video.addEventListener('contextmenu', e => e.preventDefault());
   </script>
 </body>
 </html>
+
